# barnacle

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cross.yml
ci/docker/: Dockerfile
samples/: test.j2
src/: cli.rs  error.rs  lib.rs  main.rs
